@@ -1,96 +1,0 @@
-<project xmlns:ivy="antlib:org.apache.ivy.ant" name="Cuke4Duke Groovy Webdriver Demo" default="cucumber" basedir=".">
-  <property name="dotgem.parent" value="${basedir}/lib"/>
-  <property name="gem.home" value="${dotgem.parent}/.gem"/>
-  <property name="cucumber.bin" value="${gem.home}/bin/cucumber"/>
-
-  <path id="lib">
-    <fileset dir="lib">
-      <include name="**/*.jar"/>
-    </fileset>
-  </path>
-
-  <target name="compile-main" description="Compile main classes">
-    <mkdir dir="target/classes"/>
-    <javac srcdir="src/main/java" destdir="target/classes">
-      <classpath refid="lib" />
-    </javac>
-  </target>
-
-  <target name="cucumber" depends="compile-main" description="Run Cucumber">
-    <mkdir dir="target/junit-report"/>
-
-    <java classname="org.jruby.Main" fork="true" failonerror="true">
-      <classpath refid="lib" />
-      <classpath>
-        <pathelement location="target/test-classes"/>
-        <pathelement location="target/classes"/>
-      </classpath>
-      <env key="GEM_PATH" value="${gem.home}"/>
-      <arg value="-r"/>
-      <arg value="cuke4duke"/>
-      <arg value="${cucumber.bin}"/>
-      <arg value="--color"/>
-      <arg value="--format"/>
-      <arg value="pretty"/>
-      <arg value="--format"/>
-      <arg value="junit"/>
-      <arg value="--out"/>
-      <arg value="target/junit-report"/>
-      <arg value="--guess"/>
-      <arg value="features"/>
-    </java>
-  </target>
-
-  <target name="install-deps" depends="download-jars, install-gems" description="Install all dependencies"/>
-
-  <target name="download-jars" description="Download jars with ivy">
-    <ivy:retrieve/>
-  </target>
-
-  <target name="install-gems" description="Install gems">
-    <install-gem gem="cucumber" version="0.4.2" source="http://gems.rubyforge.org/"/>
-    <install-gem gem="rspec" version="1.2.8" />
-  </target>
-
-  <macrodef name="install-gem">
-    <attribute name="gem"/>
-    <attribute name="version"/>
-    <attribute name="source" default="http://gems.rubyforge.org/"/>
-    
-    <sequential>
-      <java classname="org.jruby.Main" fork="true" failonerror="true">
-        <classpath>
-          <fileset dir="lib">
-            <include name="**/jruby*.jar"/>
-          </fileset>
-        </classpath>
-        <!-- Gems will go into lib/.gems --> 
-        <env key="HOME" value="${dotgem.parent}"/>
-        <arg value="-S"/>
-        <arg value="gem"/>
-        <arg value="install"/>
-        <arg value="--no-ri"/>
-        <arg value="--no-rdoc"/>
-        <arg value="--install-dir"/>
-        <arg value="${gem.home}"/>
-        <arg value="--source"/>
-        <arg value="@{source}"/>
-        <arg value="--version"/>
-        <arg value="@{version}"/>
-        <arg value="@{gem}"/>
-      </java>
-    </sequential>
-  </macrodef>
-
-  <target name="clean" description="Delete all generated artifacts">
-    <delete dir="${basedir}/target"/>
-  </target>
-
-  <target name="clean-deps" description="Delete all dependencies">
-    <delete dir="${basedir}/lib/.gem"/>
-    <delete>
-      <fileset dir="${basedir}/lib" includes=".jar"/>
-    </delete>
-  </target>
-
-</project>
