@@ -42,6 +42,7 @@
     <profile>
       <id>examples</id>
       <modules>
+        <module>examples/groovy-webdriver</module>
         <module>examples/guice</module>
         <module>examples/ioke</module>
         <module>examples/javascript</module>
